v2 pre-build-check for plugins

--- a/.github/workflows/v2-pre-build-checks-plugin-fmt-c.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin-fmt-c.yml
@@ -32,6 +32,9 @@ on:
         required: true
         default: 'fairness_metrics_toolbox_for_classification'
 
+  push:
+    branches: [ 'v2.x' ]
+
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
