--- a/.github/workflows/v2-pre-build-checks-plugin-ale.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin-ale.yml
@@ -4,7 +4,7 @@
 # 3. Dependency analysis (vulnerabilities)
 # 4. Dependency analysis (copyleft licenses)
 
-name: v2 Pre-build Checks (accumulated_local_effect)
+name: v2 Pre-build Checks (algo ale)
 
 on:
   # Runs when a pull request to main is being assigned
@@ -15,6 +15,7 @@ on:
     paths:
       - 'stock-plugins/aiverify.stock.accumulated-local-effect/**'
 
+      
   # Run this workflow manually from Actions tab
   workflow_dispatch:
     inputs:
@@ -32,6 +33,9 @@ on:
         required: true
         default: 'accumulated_local_effect'
 
+  push:
+    branches: [ 'ci/v2-workflows' ]
+    
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
