--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -298,6 +298,8 @@ jobs:
         git commit -m "Update All Notices File"
         
     - name: Create & Merge Pull Request
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
         gh pr create --base main --title "Update All Notices File" --body "Update All Notices File"
         git push origin $GITHUB_REF_NAME
