--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -291,8 +291,8 @@ jobs:
 
     - name: Commit All Notices File
       run: |
-        git config --global user.name $GITHUB_ACTOR
-        git config --global user.email "username@users.noreply.github.com"
+        git config --global user.name github-actions
+        git config --global user.email github-actions@github.com
         git pull
         git add .
         git commit -m "Update All Notices File"
@@ -301,7 +301,8 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh pr create --base main --title "Update All Notices File" --body "Update All Notices File" --head
+        git checkout update-notices
+        gh pr create --base main --title "Update All Notices File" --body "Update All Notices File"
         git push origin $GITHUB_REF_NAME
         
         
