--- a/.github/workflows/v2-pre-build-checks-plugin-fmt-r.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin-fmt-r.yml
@@ -17,7 +17,11 @@ on:
     branches:
       - 'v2.x'
     paths:
-      - "stock-plugins/aiverify.stock.$PLUGIN_NAME/**"
+      - 'stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/**'
+
+  push:
+    branches: [ ci/v2-workflows ]
+    paths: [ stock-plugins/aiverify.stock.$PLUGIN_NAME/** ]
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -36,11 +40,6 @@ on:
         required: true
         default: $ALGO_NAME
 
-  push:
-    branches: [ 'ci/v2-workflows' ]
-    paths:       
-      - "stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/**"
-
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
@@ -50,7 +49,7 @@ jobs:
 
   pre-build-checks:
     # Run only when PR is assigned, even on subsequent commits (i.e. synchronize)
-    if: (github.event_name == 'pull_request' && github.event.pull_request.assignee != null) || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
+    if: (github.event_name == 'pull_request' && github.event.pull_request.assignee != null) || github.event_name == 'workflow_dispatch'
 
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -58,7 +57,7 @@ jobs:
     steps:
 
       - name: Set branch variable (pull_request)
-        if: github.event_name == 'pull_request' || github.event_name == 'push'
+        if: github.event_name == 'pull_request'
         run: |
           echo "BRANCH_TO_TEST=${{ github.event.pull_request.head.ref }}" >> "$GITHUB_ENV"
           echo "PR_NUM=#${{ github.event.pull_request.number }}" >> "$GITHUB_ENV"
