--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -299,7 +299,7 @@ jobs:
         git switch update-notices
         git add .
         git commit -m "Update All Notices File"
-        git push
+        git push --set-upstream origin update-notices
         gh pr create --base v2.x --title "Update All Notices File" --body "Update All Notices File" --head $(git branch --show-current)
         gh pr merge
         
