--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -297,6 +297,7 @@ jobs:
         git config --global user.email github-actions@github.com
         git branch --set-upstream-to update-notices
         git switch update-notices
+        git pull
         git add .
         git commit -m "Update All Notices File"
         git push --set-upstream origin update-notices
