--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -295,9 +295,9 @@ jobs:
       run: |
         git config --global user.name github-actions
         git config --global user.email github-actions@github.com
-        git branch --set-upstream-to origin update-notices
-        git switch update-notices
         git pull
+        git branch update-notices
+        git switch update-notices
         git add .
         git commit -m "Update All Notices File"
         git push --set-upstream origin update-notices
