--- a/.github/workflows/v2-pre-build-checks-plugin-ict-ec.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin-ict-ec.yml
@@ -4,11 +4,11 @@
 # 3. Dependency analysis (vulnerabilities)
 # 4. Dependency analysis (copyleft licenses)
 
-name: v2 Pre-build Checks (algo ict-bc)
+name: v2 Pre-build Checks (algo ict-ec)
 
 env:
   PLUGIN_NAME: 'image-corruption-toolbox'
-  ALGO_NAME: 'blur_corruptions'
+  ALGO_NAME: 'environment_corruptions'
 
 on:
   # Runs when a pull request to main is being assigned
@@ -17,7 +17,10 @@ on:
     branches:
       - 'v2.x'
     paths:
-      - 'stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/**'
+      - 'stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/**'
+
+  push:
+    branches: [ ci/v2-workflows ]
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
