--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -307,4 +307,4 @@ jobs:
         GH_TOKEN: ${{ github.token }}
       run: |
         gh pr create --base v2.x --title "Update All Notices File" --body "Update All Notices File" --head $(git branch --show-current)
-        gh pr merge --admin
+        gh pr merge --merge --admin -b
