--- a/.github/workflows/sast-codeql.yml
+++ b/.github/workflows/sast-codeql.yml
@@ -54,7 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - language: [ 'python', 'javascript' ]
+        - language: 'python'
           build-mode: none
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
