--- a/aiverify-apigw/aiverify-apigw-node/package.json
+++ b/aiverify-apigw/aiverify-apigw-node/package.json
@@ -15,7 +15,8 @@
     "mdx-bundler": "^10.0.3",
     "moment": "^2.30.1",
     "rehype-mdx-import-media": "^1.2.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
