--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -62,8 +62,10 @@ jobs:
         run: |
           echo "BRANCH_TO_TEST=${{ github.ref }}" >> "$GITHUB_ENV"
           echo "PUSH_COMMIT=${{ github.sha }}" >> "$GITHUB_ENV"
-          echo "PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')" >> "$GITHUB_ENV"
-          echo "PUSH_FILES=${{ env.PUSH_FILES }}"
+          PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
+          echo "PUSH_FILES=$PUSH_FILES" >> "$GITHUB_ENV"
+          echo "Files changed in this push:"
+          echo "$PUSH_FILES"
       # - name: Set branch variable (pull_request)
       #   if: github.event_name == 'pull_request'
       #   run: |
