v2 pre-build-check

--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -88,24 +88,24 @@ jobs:
           echo "PLUGIN_TO_TEST=${PLUGIN_TO_TEST[*]}" >> "$GITHUB_ENV"
           echo "Algorithms to test: ${ALGO_TO_TEST[*]}"
           echo "Plugins to test: ${PLUGIN_TO_TEST[*]}"
-          
+
           echo "branch_to_test=${{ github.ref }}" >> $GITHUB_OUTPUT
 
-      - name: Prepare matrix for algorithms and plugins to test
-        id: prepare_matrix
-        run: |
-          echo "\"matrix\"={\"algo_name\": [${ALGO_TO_TEST[*]}], \"plugin_name\": [${PLUGIN_TO_TEST[*]}]}" > matrix.json
-        shell: bash
+      # - name: Prepare matrix for algorithms and plugins to test
+      #   id: prepare_matrix
+      #   run: |
+      #     echo "\"matrix\"={\"algo_name\": [${{ env.ALGO_TO_TEST[*]}}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST[*]}}]}" > matrix.json
+      #   shell: bash
 
-      - name: Set up job matrix
-        uses: actions/github-script@v4
-        id: set-matrix
-        with:
-          script: |
-            const fs = require('fs');
-            const matrix = JSON.parse(fs.readFileSync('matrix.json', 'utf8'));
-            return matrix;
-          result-encoding: string
+      # - name: Set up job matrix
+      #   uses: actions/github-script@v4
+      #   id: set-matrix
+      #   with:
+      #     script: |
+      #       const fs = require('fs');
+      #       const matrix = JSON.parse(fs.readFileSync('matrix.json', 'utf8'));
+      #       return matrix;
+      #     result-encoding: string
 
   run-pre-build-checks:
     needs: init-pre-build-checks
