--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -65,7 +65,7 @@ jobs:
           echo "BRANCH_TO_TEST=${{ github.ref }}" >> "$GITHUB_ENV"
           echo "PUSH_COMMIT=${{ github.sha }}" >> "$GITHUB_ENV"
           PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
-          echo "PUSH_FILES=$PUSH_FILES" >> "$GITHUB_ENV"
+          # echo "PUSH_FILES=$PUSH_FILES" >> "$GITHUB_ENV"
           echo "Files changed in this push:"
           echo "$PUSH_FILES"
 
@@ -89,11 +89,7 @@ jobs:
           echo "Algorithms to test: ${ALGO_TO_TEST[*]}"
           echo "Plugins to test: ${PLUGIN_TO_TEST[*]}"
 
-          echo "branch_to_test=v2-workflows" >> "$GITHUB_OUTPUT"
-
-      - name: Next Step
-        run: |
-          echo "Next step"
+          echo "branch_to_test=${{ github.ref }}" >> "$GITHUB_OUTPUT"
 
       # - name: Prepare matrix for algorithms and plugins to test
       #   id: prepare_matrix
