--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -91,10 +91,10 @@ jobs:
 
           echo "branch_to_test=${{ github.ref }}" >> "$GITHUB_OUTPUT"
 
-      # - name: Prepare matrix for algorithms and plugins to test
-      #   id: prepare_matrix
-      #   run: |
-      #     echo "\"matrix\"={\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}]}" > matrix.json
+      - name: Prepare matrix for algorithms and plugins to test
+        id: prepare_matrix
+        run: |
+          echo "\"matrix\"={\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}]}" > matrix.json
 
       - name: Set up job matrix
         uses: actions/github-script@v4
