--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -94,9 +94,14 @@ jobs:
       - name: Prepare matrix for algorithms and plugins to test
         id: prepare_matrix
         run: |
-          MATRIX="matrix={\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}]}"
-          echo "$MATRIX"
-          echo "$MATRIX" >> "$GITHUB_OUTPUT"
+
+          matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s .)
+          echo "matrix={\"include\":[$matrix_include"]} >> "$GITHUB_ENV"
+          echo ${{ env.matrix }}
+
+          # MATRIX="matrix={\"include\":[\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}]}"
+          # echo "$MATRIX"
+          # echo "$MATRIX" >> "$GITHUB_OUTPUT"
 
       # - name: Set up job matrix
       #   uses: actions/github-script@v4
